--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="cenario-passo4-voltar-casa.png"
+            <img src="IMG/cenario-passo4-voltar-casa.png" alt="Voltando para Casa e Desistindo da Aventura">
             <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria encontrado.</p>
         </div>
 
