--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
         </div> 
 
+        <div class="passo" id="passo-11">
+            <img src="IMG/cenario-passo11-cidade-perdida.png" alt="Encontrado uma Cidade Maravilhosa Perdida no Amazonas" srcset="">
+            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar este lugar</p>
+        </div> 
+
         <div class="passo" id="passo-12">
             <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições que levam à cidade perdida.</p>
             <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
